--- a/public/index.ejs
+++ b/public/index.ejs
@@ -12,7 +12,7 @@
     <label for="pwd">비밀번호</label>
     <input type="password" id="password" name="password"><br>
     <button>로그인</button>
-    <a href='sign.ejs'>회원가입</a>
+    <a href='sign'>회원가입</a>
   </form>
 </body>
 </html>
