--- a/public/login.ejs
+++ b/public/login.ejs
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>로그인 실패</title>
+  <title>로그인 성공</title>
 </head>
 <body>
-  <h1>로그인 실패!</h1>
+  <h1><%= sess  %> 로그인 성공!</h1>
+  <a href='write'>글쓰기</a>
+  <a href='logout'>로그아웃</a>
 </body>
 </html>
