--- a/public/sign.ejs
+++ b/public/sign.ejs
@@ -1,7 +1,16 @@
-<div class="form-box">
-    <form action="/sign" method="post">
-        <input name="id" type="userId" placeholder="아이디를 입력해주세요">
-        <input name="password" type="password" placeholder="비밀번호를 입력해주세요">
-        <button type="submit">sign</button>
-    </form>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <h1>가입하기</h1>
+  <form method="POST" action="/sign">
+    <label for="id">아이디</label>
+    <input type="text" id="userId" name="userId"><br>
+    <input type="password" id="password" name="password"><br>
+    <button>가입</button>
+  </form>
+</body>
+</html>
