--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <h1>로그인하기</h1>
-  <form method="POST" action="/login">
-    <label for="id">아이디</label>
-    <input type="text" id="userId" name="userId"><br>
-    <label for="pwd">비밀번호</label>
-    <input type="password" id="password" name="password"><br>
-    <button>로그인</button>
-    <a href='sign'>회원가입</a>
+  <form method="post" action="/requsetLogin">
+    <label for="pass" class="label">Email Address</label>
+    <input name="new_email" type="text"><br>
+    <label for="pass" class="label">Password</label>
+    <input name="password" type="password" class="input" data-type="password"><br>
+    <input type="submit" value="send">
   </form>
 </body>
 </html>
