--- a/public/index.ejs
+++ b/public/index.ejs
@@ -8,7 +8,7 @@
 <body>
   <form method="post" action="/requsetLogin">
     <label for="pass" class="label">Email Address</label>
-    <input name="new_email" type="text"><br>
+    <input name="email" type="text"><br>
     <label for="pass" class="label">Password</label>
     <input name="password" type="password" class="input" data-type="password"><br>
     <input type="submit" value="send">
